[workspace]
members = ["thread"]

[workspace.package]
edition = "2021"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
