[package]
name = "thread"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
defmt = "0.3.2"
defmt-rtt = "0.4"
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "eed2b123253380d67f76bf1d0272688e8053bc9a", features = ["defmt", "defmt-timestamp-uptime", "nightly"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "eed2b123253380d67f76bf1d0272688e8053bc9a", features = ["defmt", "nightly", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "eed2b123253380d67f76bf1d0272688e8053bc9a", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "nightly"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
